--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -12,12 +12,606 @@ body, html {
     height: 100%;
 }
 
-.hero-image{
-    background-image: url('../img/uvod.jpg');
-    height: 100%;
-    
-     background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;   
+.banner {
+    background: url(../images/uvod.jpg) no-repeat 0px 0px;
+    min-height: 700px;
+    background-size: 100% 100%;
+}
+
+.banner-info {
+    margin-top: 4.5em;
+    padding-top: 13.5em;
+}
+.banner-info h1 {
+    font-size: 2.5em;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 800;
+    line-height: 1.4em;
+    margin: 0em;
+}
+.banner-info h1 span {
+    display: block;
+}
+.banner-info p {
+    color: rgb(211, 235, 211);
+    font-family: 'Playball', cursive;
+    font-size: 1.3em;
+}
+.big-btn {
+    margin-top: 2.5em;
+    display: inline-block;
+}
+a.big-btn span {
+    width: 80px;
+    height: 80px;
+    display: inline-block;
+    background: url(../images/big-btn.png) no-repeat 0px 0px;
+}
+.container {
+    width: 80%;
+}
+
+label {
+    display: inline-block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+p {
+    margin: 0 0 10px;
+}
+/*----works----*/
+.work{
+	padding:3em 0;
+}
+.head-one{
+	padding:0em 0 2em;
+}
+.head-one h2{
+	color:#303030;
+	font-weight:800;
+	font-size:1.8em;
+	text-transform:uppercase;
+	margin:0.2em 0;
+}
+.head-one span{
+	height:3px;
+	background:#303030;
+	display:inline-block;
+	width:20%;
+	margin:0;
+	padding:0;
+}
+.head-one p{
+	margin: 0.4em auto;
+	font-size: 1em;
+	color: #5A5A5A;
+	letter-spacing: 0.015em;
+	width: 61%;
+	line-height: 1.5em;
+}
+.caption a{
+    color: #ffffff;
+}
+.caption a:hover{
+    color: #2effff;
+    text-decoration: none;
+}
+.work-grid img{
+	width:100%;
+}
+.work-grid{
+	margin-bottom:30px;
+}
+/*Me*/
+.me{
+	background: rgba(70, 70, 70, 0.123);
+	padding: 3em 0 4em;
+	border: 1px solid #DBDBDB;
+	border-right: 0;
+	border-left: 0;
+}
+.me-head p{
+	width: 59%;
+	font-weight: 600;
+	color: #5A5A5A;
+	margin: 1.2em auto;
+}
+.me-member{
+	background:#FFFFFF;
+	padding: 3em;
+	box-shadow: 0px 1px 2px #999;
+	-webkit-box-shadow: 0px 1px 2px #999;
+	-moz-box-shadow: 0px 1px 2px #999;
+	-o-box-shadow: 0px 1px 2px #999;
+	-ms-box-shadow: 0px 1px 2px #999;
+}
+img.t-pic{
+	border-radius: 30em;
+	-webkit-border-radius: 30em;
+	-moz-border-radius: 30em;
+	-o-border-radius: 30em;
+	-ms-border-radius: 30em;
+	border: 3px solid #FFF;
+	box-shadow: 0px 5px 4px #999;
+	-webkit-box-shadow: 0px 5px 4px #999;
+	-moz-box-shadow: 0px 5px 4px #999;
+	-o-box-shadow: 0px 5px 4px #999;
+	-ms-box-shadow: 0px 5px 4px #999;
+}
+.me-member h3{
+	text-transform: uppercase;
+	font-weight: 800;
+	font-size: 1em;
+	margin: 1em 0 0.3em;
+	color:#303030;
+}
+.me-member span{
+	font-style:italic;
+	color:#303030;
+}
+.list-inline > li {
+    display: inline-block;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+/*---
+
+/* footer social icons */
+.social-network a.icoRss:hover {
+	background-color: #F56505;
+}
+.social-network a.icoFacebook:hover {
+	background-color:#3B5998;
+}
+.social-network a.icoTwitter:hover {
+	background-color:#33ccff;
+}
+.social-network a.icoGoogle:hover {
+	background-color:#BD3518;
+}
+.social-network a.icoVimeo:hover {
+	background-color:#0590B8;
+}
+.social-network a.icoLinkedin:hover {
+	background-color:#007bb7;
+}
+.social-network a.icoInstagram:hover {
+	background-color:#8a3ab9;
+}
+
+.social-network a.icoRss:hover i, .social-network a.icoFacebook:hover i, .social-network a.icoTwitter:hover i,
+.social-network a.icoGoogle:hover i, .social-network a.icoVimeo:hover i, .social-network a.icoLinkedin:hover i, a.icoInstagram:hover i {
+	color:#fff;
+}
+a.socialIcon:hover, .socialHoverClass {
+	color:#44BCDD;
+}
+
+.social-circle li a {
+	display:inline-block;
+	position:relative;
+	margin:0 auto 0 auto;
+	-moz-border-radius:50%;
+	-webkit-border-radius:50%;
+	border-radius:50%;
+	text-align:center;
+	width: 50px;
+	height: 50px;
+	font-size:20px;
+}
+.social-circle li i {
+	margin:0;
+	line-height:50px;
+	text-align: center;
+}
+
+.social-circle li a:hover i, .triggeredHover {
+	-moz-transform: rotate(360deg);
+	-webkit-transform: rotate(360deg);
+	-ms--transform: rotate(360deg);
+	transform: rotate(360deg);
+	-webkit-transition: all 0.2s;
+	-moz-transition: all 0.2s;
+	-o-transition: all 0.2s;
+	-ms-transition: all 0.2s;
+	transition: all 0.2s;
+}
+.social-circle i {
+	color: rgb(90, 90, 90);
+	-webkit-transition: all 0.8s;
+	-moz-transition: all 0.8s;
+	-o-transition: all 0.8s;
+	-ms-transition: all 0.8s;
+	transition: all 0.8s;
+}
+
+a {
+ background-color: #D3D3D3;   
+}
+/*----contact----*/
+.contact{
+	padding: 3em 0 6em;
+}
+.contact-map{
+	
+}
+.contact-map p,.contact-form p{
+	font-size: 1.2em;
+	color: #5A5A5A;
+	margin: 0.5em 0 1em;
+	font-weight: 400;
+	display: block;
+}
+.contact-map iframe{
+	width:100%;
+	min-height:350px;
+	border:8px solid #FFF;
+	box-shadow:0px 0px 2px #999;
+	-webkit-box-shadow:0px 0px 2px #999;
+	-moz-box-shadow:0px 0px 2px #999;
+	-o-box-shadow:0px 0px 2px #999;
+	-ms-box-shadow:0px 0px 2px #999;
+}
+.contact-form textarea{
+	width: 100%;
+	min-height: 254px;
+	resize: none;
+	outline: none;
+	background: #F2F2F2;
+	padding: 0.8em;
+	font-family: 'Playball', cursive;
+	font-size: 1.3em;
+	color: #666;
+	border: 1px solid #DADADA;
+	transition: border-color 0.3s;
+	-o-transition: border-color 0.3s;
+	-ms-transition: border-color 0.3s;
+	-moz-transition: border-color 0.3s;
+	-webkit-transition: border-color 0.3s;
+}
+.contact-form input[type="text"]{
+	width: 65%;
+	background: #F2F2F2;
+	padding: 0.8em;
+	font-family: 'Playball', cursive;
+	font-size: 1.3em;
+	color: #666;
+	border: 1px solid #DADADA;
+	outline:none;
+	margin-right:5%;
+	margin-top:5%;
+	transition: border-color 0.3s;
+	-o-transition: border-color 0.3s;
+	-ms-transition: border-color 0.3s;
+	-moz-transition: border-color 0.3s;
+	-webkit-transition: border-color 0.3s;
+}
+.contact-form input[type="text"]:hover,.contact-form textarea:hover{
+	border-color:#6995A9;
+}
+.contact-form input[type="submit"]{
+	background: url(../images/upload.png) no-repeat 28px 17px #6995A9;
+	color: #FFF;
+	text-transform: uppercase;
+	font-weight: 700;
+	padding: 0.93em 1em;
+	border: none;
+	width: 29.3%;
+	text-indent: 19px;
+	transition: 0.5s all;
+	-webkit-transition: 0.5s all;
+	-moz-transition: 0.5s all;
+	-o-transition: 0.5s all;
+	-ms-transition: 0.5s all;
+	font-size: 1.2em;
+	letter-spacing: 0.05em;
+}
+.contact-form input[type="submit"]:hover{
+	background: url(../images/upload.png) no-repeat 28px 17px #303030;
+}
+/*--//contact----*/
+/*----footer----*/
+.footer{
+	background: rgba(70, 70, 70, 0.562);
+	padding:1.5em 1em;
+}
+.footer p{
+	margin:0;
+	padding:0;
+	color:#ebebeb;
+	font-size:1em;
+}
+.footer-left{
+	float:left;
+}
+.footer-right{
+	float:right;
+}
+.footer p span,.footer p a{
+	color:#949494;
+}
+.footer p a:hover{
+	text-decoration:none;
+	color:#6995A9;
+}
+#toTop {
+	display: none;
+	text-decoration: none;
+	position: fixed;
+	bottom: 14px;
+	right: 3%;
+	overflow: hidden;
+	width: 40px;
+	height: 40px;
+	border: none;
+	text-indent: 100%;
+	background: url("../images/to-top1.png") no-repeat 0px 0px;
+}
+#toTopHover {
+	width: 40px;
+	height: 40px;
+	display: block;
+	overflow: hidden;
+	float: right;
+	opacity: 0;
+	-moz-opacity: 0;
+	filter: alpha(opacity=0);
+}
+/*----respoisnive-design----*/
+@media (max-width:1366px){
+	.container{
+		width:75%;
+	}
+}
+@media (max-width:1280px){
+	.container{
+		width:80%;
+	}
+	.banner {
+		min-height: 560px;
+	}
+	.banner-info {
+		margin-top: 12.5em;
+	}
+}
+@media (max-width:1024px){
+	.container{
+		width:80%;
+	}
+	.banner {
+		min-height: 560px;
+	}
+	.banner-info {
+		margin-top: 12.5em;
+	}
+	.contact-map p, .contact-form p {
+		font-size: 1.1em;
+	}
+}
+@media (max-width:768px){
+	.container{
+		width:80%;
+	}
+	.banner {
+		min-height: 480px;
+	}
+	.banner-info {
+		margin-top: 9.5em;
+	}
+	.contact-map p, .contact-form p {
+		font-size: 1.1em;
+	}
+	.head-one p {
+		width: 90%;
+	}
+	.logo {
+		margin-top: 0.1em;
+	}
+	nav a#pull {
+		top: 10px;
+	}
+	.team-member{
+		margin:1em 0;
+	}
+	.team {
+		padding: 2em 0 3em;
+	}
+	.head-one {
+		padding: 0em 0 0.5em;
+	}
+	.footer-left,.footer-right{
+		float: none;
+	}
+	.footer{
+		text-align:center;
+	}
+}
+@media (max-width:640px){
+	.container{
+		width:80%;
+	}
+	.banner {
+		min-height: 450px;
+	}
+	.banner-info {
+		margin-top: 6.5em;
+	}
+	.contact-map p, .contact-form p {
+		font-size: 1.1em;
+	}
+	.head-one p {
+		width: 90%;
+	}
+	.logo {
+		margin-top: 0.1em;
+	}
+	nav a#pull {
+		top: 10px;
+	}
+	.team-member{
+		margin:1em 0;
+	}
+	.team {
+		padding: 2em 0 3em;
+	}
+	.head-one {
+		padding: 0em 0 0.5em;
+	}
+	.footer-left,.footer-right{
+		float: none;
+	}
+	.footer{
+		text-align:center;
+	}
+	.contact-form input[type="submit"] {
+		background: url(../images/upload.png) no-repeat 16px 17px #6995A9;
+	}
+	.contact-form input[type="submit"]:hover {
+		background: url(../images/upload.png) no-repeat 16px 17px #303030;
+	}
+}
+@media (max-width:480px){
+	.container{
+		width:80%;
+	}
+	.banner {
+		min-height: 380px;
+	}
+	.banner-info {
+		margin-top: 4.5em;
+	}
+	.contact-map p, .contact-form p {
+		font-size: 1.1em;
+	}
+	.head-one p {
+		width: 90%;
+	}
+	.logo {
+		margin-top: 0.1em;
+	}
+	nav a#pull {
+		top: 10px;
+	}
+	.team-member{
+		margin:1em 0;
+	}
+	.team {
+		padding: 2em 0 3em;
+	}
+	.head-one {
+		padding: 0em 0 0.5em;
+	}
+	.footer-left,.footer-right{
+		float: none;
+	}
+	.footer{
+		text-align:center;
+	}
+	.contact-form input[type="submit"] {
+		background: url(../images/upload.png) no-repeat 101px 17px #6995A9;
+		width:100%;
+	}
+	.contact-form input[type="submit"]:hover {
+		background: url(../images/upload.png) no-repeat 101px 17px #303030;
+	}
+	.banner-info h1 {
+		font-size: 2em;
+	}
+	.contact-form input[type="text"] {
+		width: 100%;
+		margin-bottom:1em;
+	}
+
+}
+@media (max-width:320px){
+	.container{
+		width:90%;
+	}
+	.banner {
+		min-height:280px;
+	}
+	.banner-info {
+		margin-top: 2.5em;
+	}
+	.contact-map p, .contact-form p {
+		font-size: 1.1em;
+	}
+	.head-one p {
+		width: 90%;
+	}
+	.logo {
+		margin-top: 0.1em;
+	}
+	nav a#pull {
+		top: 9px;
+	}
+	.team-member{
+		margin:1em 0;
+	}
+	.team {
+		padding: 1.5em 0;
+	}
+	.head-one {
+		padding: 0em 0 0.5em;
+	}
+	.footer-left,.footer-right{
+		float: none;
+	}
+	.footer{
+		text-align:center;
+	}
+	.contact-form input[type="submit"] {
+		background: url(../images/upload.png) no-repeat 58px 8px #6995A9;
+		width:100%;
+		padding: 0.5em;
+	}
+	.contact-form input[type="submit"]:hover {
+		background: url(../images/upload.png) no-repeat 58px 8px #303030;
+	}
+	.banner-info h1 {
+		font-size: 1.5em;
+	}
+	.contact-form input[type="text"] {
+		width: 100%;
+		margin-bottom:1em;
+		padding: 0.5em;
+	}
+	.banner-info p {
+		font-size: 1em;
+	}
+	.big-btn {
+		margin-top: 1em;
+	}
+	.head-one h2 {
+		font-size: 1.2em;
+	}
+	.work {
+		padding: 1.5em 0;
+	}
+	.contact-map iframe {
+		min-height: 217px;
+	}
+	.contact-form textarea {
+		min-height: 206px;
+		padding: 0.5em;
+	}
+	.contact {
+		padding: 1.5em 0 3em;
+	}
+	.head-one span {
+		width: 40%;
+	}
+	
+}
+/*--//respoisnive-design----*/
+
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
+.col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm,
+.col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
+.col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
+.col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl,
+.col-xl-auto {
+  float:left;
+
 }
