--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -179,9 +179,13 @@ img.t-pic{
 .social-network a.icoInstagram:hover {
 	background-color:#8a3ab9;
 }
+.social-network a.icoGmail:hover {
+	background-color:#c71610;
+}
 
 .social-network a.icoRss:hover i, .social-network a.icoFacebook:hover i, .social-network a.icoTwitter:hover i,
-.social-network a.icoGoogle:hover i, .social-network a.icoVimeo:hover i, .social-network a.icoLinkedin:hover i, a.icoInstagram:hover i {
+.social-network a.icoGoogle:hover i, .social-network a.icoVimeo:hover i, .social-network a.icoLinkedin:hover i, a.icoInstagram:hover i,
+a.icoGmail:hover i {
 	color:#fff;
 }
 a.socialIcon:hover, .socialHoverClass {
