--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -104,6 +104,7 @@ p {
 	margin-bottom:30px;
 }
 /*Me*/
+
 .me{
 	background: rgba(70, 70, 70, 0.123);
 	padding: 3em 0 4em;
@@ -117,14 +118,21 @@ p {
 	color: #5A5A5A;
 	margin: 1.2em auto;
 }
+.me-height{
+	min-height: 380px;
+}
 .me-member{
 	background:#FFFFFF;
 	padding: 3em;
+	
 	box-shadow: 0px 1px 2px #999;
 	-webkit-box-shadow: 0px 1px 2px #999;
 	-moz-box-shadow: 0px 1px 2px #999;
 	-o-box-shadow: 0px 1px 2px #999;
 	-ms-box-shadow: 0px 1px 2px #999;
+}
+.center{
+	margin-left: 10%;
 }
 img.t-pic{
 	border-radius: 30em;
@@ -300,9 +308,9 @@ a {
 	text-transform: uppercase;
 	font-weight: 700;
 	padding: 0.93em 1em;
+	margin-top: 0.5em;
 	border: none;
 	width: 29.3%;
-	text-indent: 19px;
 	transition: 0.5s all;
 	-webkit-transition: 0.5s all;
 	-moz-transition: 0.5s all;
@@ -608,6 +616,8 @@ a {
 	}
 	
 }
+
+
 /*--//respoisnive-design----*/
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
