--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -14,13 +14,12 @@ body, html {
 
 .banner {
     background: url(../images/uvod.jpg) no-repeat 0px 0px;
-    min-height: 700px;
+    min-height: 100%;
     background-size: 100% 100%;
 }
 
 .banner-info {
-    margin-top: 4.5em;
-    padding-top: 13.5em;
+    padding-top: 25.5em;
 }
 .banner-info h1 {
     font-size: 2.5em;
@@ -125,7 +124,7 @@ p {
 	background:#FFFFFF;
 	padding: 3em;
 	
-	box-shadow: 0px 1px 2px #999;
+	box-shadow: 1px 1px 2px #999;
 	-webkit-box-shadow: 0px 1px 2px #999;
 	-moz-box-shadow: 0px 1px 2px #999;
 	-o-box-shadow: 0px 1px 2px #999;
