--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -7,7 +7,15 @@ and open the template in the editor.
     Created on : 8.11.2017, 15:14:09
     Author     : nskyp
 */
-
+.hidden{
+	opacity:0;
+}
+.visible{
+	opacity:1;
+}
+.halfods{
+ padding: 0em 5em 0em 5em;
+}
 body, html {
     height: 100%;
 }
@@ -134,6 +142,11 @@ p {
 .me-height{
 	min-height: 380px;
 }
+.my-animation{
+	-webkit-animation-duration: 1s;
+	-webkit-animation-delay: 1s;
+	-webkit-animation-iteration-count: 2s;
+}
 .me-member{
 	background:#FFFFFF;
 	padding: 3em;
@@ -143,6 +156,8 @@ p {
 	-moz-box-shadow: 0px 1px 2px #999;
 	-o-box-shadow: 0px 1px 2px #999;
 	-ms-box-shadow: 0px 1px 2px #999;
+
+
 }
 .center{
 	margin-left: 10%;
@@ -394,7 +409,7 @@ a {
 		margin: 0 auto;
 	}	
 	.banner-info {
-		padding-top: 20.5em;
+		padding-top: 11.05em;
 	}
 }
 @media (max-width:1366px){
